thêm hiệu ứng tự chuyển đổi ảnh

--- a/index.html
+++ b/index.html
@@ -96,8 +96,16 @@
                     <div class="text">
                         Up to 10% OFF
                     </div>
-                    <div class="img">
+                    <div class="img slide fade">
                         <img src="/bai 1/image/Iphone15.webp"
+                            alt="Iphone 15">
+                    </div>
+                    <div class="img slide fade">
+                        <img src="/bai 1/image/aophong.webp"
+                            alt="Iphone 15">
+                    </div>
+                    <div class="img slide fade">
+                        <img src="/bai 1/image/shopping.webp"
                             alt="Iphone 15">
                     </div>
                 </div>
@@ -532,6 +540,7 @@ country</div>
             </section>
         </main>
     </div>
+    <script type="module" src="/bai 1/js/home.js"></script>
 </body>
 
 </html>
